// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme styles has correct height based on header height in unpinned mode 1`] = `
.c0 {
  height: 5em;
  position: relative;
  -webkit-transition: background-color 400ms ease-in-out;
  transition: background-color 400ms ease-in-out;
}

<div
  class="c0"
  height="80"
/>
`;

exports[`theme styles has correct height based on the header height in pinned mode 1`] = `
.c0 {
  height: 3.5em;
  position: relative;
  -webkit-transition: background-color 400ms ease-in-out;
  transition: background-color 400ms ease-in-out;
}

<div
  class="c0"
  height="56"
/>
`;
